# aspen-chat-server

./: .gitignore  Cargo.toml  docker-compose.yaml  out.rs
message_gen/: Cargo.toml
message_gen/src/: lib.rs
migrations/2025-05-03-010148_setup/: down.sql  up.sql
migrations/2025-05-04-215759_add_password_hash/: up.sql
server/: Cargo.toml
server/locales/: en.yml
server/migrations/2025-05-03-010148_setup/: up.sql
server/migrations/2025-05-03-021918_message_time/: down.sql  up.sql
server/migrations/2025-05-04-215759_add_password_hash/: down.sql
server/migrations/2026-02-16-043215-0000_sort_index/: down.sql  up.sql
server/migrations/2026-02-16-052527-0000_uncaptured/: down.sql  up.sql
server/migrations/2026-02-16-212308-0000_attachments/: down.sql  up.sql
server/src/: aspen_config.rs  handle_request.rs  main.rs  nats_connection_manager.rs
server/src/api/: category.rs  channel.rs  command_response.rs  community.rs  event_stream.rs  icon.rs  login.rs  message.rs  message_enum.rs  mod.rs  react.rs  user.rs
server/src/app/: attachment.rs  category.rs  channel.rs  community.rs  error.rs  icon.rs  login.rs  message.rs  mod.rs  user.rs
server/src/aspen_protocol/: mod.rs  server_event.rs
server/src/database/: schema.rs
src/: handle_request.rs  main.rs
src/aspen_protocol/: client_event.rs  mod.rs  server_event.rs
src/database/: schema.rs
