[package]
name = "aspen-chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
ctrlc = { version = "3.4.6", features = ["termination"] }
dashmap = "6.1.0"
diesel = { version = "2.2.10", features = ["uuid", "chrono", "postgres", "r2d2"] }
directories-next = "2.0.0"
futures-util = "0.3.31"
rcgen = "0.13.2"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }

message_gen = { path = "../message_gen" }
rand = "0.9.1"
rand_chacha = "0.9.0"
base64 = "0.22.1"
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres", "r2d2"] }
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.12", features = ["http1", "http2", "server", "server-auto", "server-graceful"] }
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tokio-rustls = "0.26.2"
async-nats = { version = "0.41.0", features = ["aws-lc-rs", "server_2_10", "server_2_11"], default-features = false }
bytes = "1.10.1"
config = { version = "0.15.14", features = ["toml"] }
